Fixing TodoSearch on Safari

--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -10,6 +10,8 @@
 
 .supportSearchContainer {
   position: relative;
+  height: 2.8em;
+  width: 21em;
 }
 
 .iconSearch {
@@ -21,10 +23,12 @@
 }
 
 .TodoSearch {
-  height: 3.2em;
-  width: 24em;
+  /*height: 3.2em;*/
+  /*width: 24em;*/
+  height: 100%;
+  width: 100%;
   outline: none;
-  padding-left: 0.5em;
+  /*padding-left: 0.5em;*/
   border: 1px solid gray;
   border-radius: 5px;
   transition: opacity 1s, background-color 0.5s;
